--- a/MrOrdinaire.cabal
+++ b/MrOrdinaire.cabal
@@ -5,9 +5,9 @@ cabal-version:      >= 1.10
 
 executable site
   main-is:          MrOrdinaire.hs
-  build-depends:    base == 4.*
-                  , hakyll == 4.5.*
-                  , clay == 0.9.*
-                  , text == 1.*
+  build-depends:    base >= 4.*
+                  , hakyll >= 4.7.*
+                  , clay >= 0.10.*
+                  , text
   ghc-options:      -threaded
   default-language: Haskell2010
