updated to stack

--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,31 @@
-*.swp
+# Created by https://www.gitignore.io
+
+### Haskell ###
+dist
+cabal-dev
 *.o
 *.hi
 *.chi
 *.chs.h
-cabal.sandbox.config
-cabal.config
-
-dist/
+*.dyn_o
+*.dyn_hi
+.hpc
+.hsenv
 .cabal-sandbox/
+cabal.sandbox.config
+*.prof
+*.aux
+*.hp
+.stack-work/
 
+### Vim ###
+[._]*.s[a-w][a-z]
+[._]s[a-w][a-z]
+*.un~
+Session.vim
+.netrwhist
+*~
+
+### Customizations ###
 _cache/
 _site/
