--- a/site.cabal
+++ b/site.cabal
@@ -4,10 +4,10 @@ build-type:         Simple
 cabal-version:      >= 1.10
 
 executable site
-  main-is:          MrOrdinaire.hs
-  build-depends:    base >= 4.*
-                  , hakyll >= 4.7.*
-                  , clay >= 0.10.*
+  main-is:          site.hs
+  build-depends:    base >=4.7 && <5
+                  , hakyll
+                  , clay
                   , text
   ghc-options:      -threaded
   default-language: Haskell2010
